// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValue arrayRemove 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favoriteFruits": {
                      "type": "array_value",
                      "value": [
                        {
                          "type": "string_value",
                          "value": "apple",
                        },
                        {
                          "type": "map_value",
                          "value": {
                            "name": {
                              "type": "string_value",
                              "value": "grape",
                            },
                          },
                        },
                      ],
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`FieldValue arrayUnion 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favoriteFruits": {
                      "type": "array_value",
                      "value": [
                        {
                          "type": "string_value",
                          "value": "apple",
                        },
                        {
                          "type": "map_value",
                          "value": {
                            "name": {
                              "type": "string_value",
                              "value": "banana",
                            },
                          },
                        },
                        {
                          "type": "string_value",
                          "value": "orange",
                        },
                        {
                          "type": "map_value",
                          "value": {
                            "name": {
                              "type": "string_value",
                              "value": "grape",
                            },
                          },
                        },
                      ],
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`FieldValue increment 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "age": {
                      "type": "integer_value",
                      "value": 21,
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can create document 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can delete document 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can delete document 2`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can set document 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can set document with merge 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favorites": {
                      "type": "map_value",
                      "value": {
                        "animal": {
                          "type": "string_value",
                          "value": "cat",
                        },
                        "cake": {
                          "type": "string_value",
                          "value": "chocolate",
                        },
                        "color": {
                          "type": "string_value",
                          "value": "blue",
                        },
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can set document with merge complex key 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favorites": {
                      "type": "map_value",
                      "value": {
                        "animal": {
                          "type": "string_value",
                          "value": "cat",
                        },
                        "cake": {
                          "type": "string_value",
                          "value": "cheese",
                        },
                        "color": {
                          "type": "string_value",
                          "value": "blue",
                        },
                      },
                    },
                    "favorites.color": {
                      "type": "string_value",
                      "value": "red",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can set document without merge 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favorites": {
                      "type": "map_value",
                      "value": {
                        "cake": {
                          "type": "string_value",
                          "value": "chocolate",
                        },
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`can update document 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Bob",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition with precondition must be exist delete document which is exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition with precondition must be exist delete document which is not exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition with precondition must not be exist delete document which is exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition with precondition must not be exist delete document which is not exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition without precondition delete document which is exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`delete document with precondition without precondition delete document which is not exist 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type array 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favoriteFruits": {
                      "type": "array_value",
                      "value": [
                        {
                          "type": "string_value",
                          "value": "apple",
                        },
                        {
                          "type": "string_value",
                          "value": "banana",
                        },
                      ],
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type boolean 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "isAdult": {
                      "type": "boolean_value",
                      "value": true,
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type geopoint 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "location": {
                      "type": "geo_point_value",
                      "value": {
                        "latitude": 35.681236,
                        "longitude": 139.767125,
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type map 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "address": {
                      "type": "map_value",
                      "value": {
                        "city": {
                          "type": "string_value",
                          "value": "Tokyo",
                        },
                        "zipCode": {
                          "type": "string_value",
                          "value": "123-4567",
                        },
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type map in array 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "favoriteFruits": {
                      "type": "array_value",
                      "value": [
                        {
                          "type": "map_value",
                          "value": {
                            "color": {
                              "type": "string_value",
                              "value": "red",
                            },
                            "name": {
                              "type": "string_value",
                              "value": "apple",
                            },
                          },
                        },
                        {
                          "type": "map_value",
                          "value": {
                            "color": {
                              "type": "string_value",
                              "value": "yellow",
                            },
                            "name": {
                              "type": "string_value",
                              "value": "banana",
                            },
                          },
                        },
                      ],
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type map in map 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "address": {
                      "type": "map_value",
                      "value": {
                        "zipCode": {
                          "type": "map_value",
                          "value": {
                            "postfix": {
                              "type": "string_value",
                              "value": "4567",
                            },
                            "prefix": {
                              "type": "string_value",
                              "value": "123",
                            },
                          },
                        },
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type null 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "address": {
                      "type": "null_value",
                      "value": null,
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type number 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "age": {
                      "type": "integer_value",
                      "value": 20,
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type reference 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "friend": {
                      "type": "reference_value",
                      "value": "projects/test-project/databases/(default)/documents/users/bob",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type string 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`field type timestamp 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "createdAt": {
                      "type": "timestamp_value",
                      "value": {
                        "nanos": 0,
                        "seconds": 1577836800,
                      },
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`nested collection set 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {
                    "posts": {
                      "documents": {
                        "post1": {
                          "collections": {},
                          "fields": {
                            "body": {
                              "type": "string_value",
                              "value": "World",
                            },
                            "title": {
                              "type": "string_value",
                              "value": "Hello",
                            },
                          },
                          "path": "projects/test-project/databases/(default)/documents/users/alice/posts/post1",
                        },
                      },
                      "path": "projects/test-project/databases/(default)/documents/users/alice/posts",
                    },
                  },
                  "fields": {},
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`transaction delete in transaction 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {},
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`transaction get and set in transaction 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "age": {
                      "type": "integer_value",
                      "value": 21,
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`transaction query in transaction 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "age": {
                      "type": "integer_value",
                      "value": 20,
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`transaction set in transaction 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;

exports[`transaction update in transaction 1`] = `
{
  "projects": {
    "test-project": {
      "databases": {
        "(default)": {
          "collections": {
            "users": {
              "documents": {
                "alice": {
                  "collections": {},
                  "fields": {
                    "age": {
                      "type": "integer_value",
                      "value": 21,
                    },
                    "name": {
                      "type": "string_value",
                      "value": "Alice",
                    },
                  },
                  "path": "projects/test-project/databases/(default)/documents/users/alice",
                },
              },
              "path": "projects/test-project/databases/(default)/documents/users",
            },
          },
          "path": "projects/test-project/databases/(default)/documents",
        },
      },
      "path": "projects/test-project",
    },
  },
}
`;
